# helixir

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  exercises.toml  package.json
.github/workflows/: ci.yml
exercises/: README.md
exercises/01-movement/: 01-basic-motion.hxt  01-basic-motion.md  02-word-motion.hxt  02-word-motion.md  03-find-and-till.hxt  03-find-and-till.md  04-line-navigation.hxt  04-line-navigation.md  05-scrolling-and-jumps.hxt  05-scrolling-and-jumps.md
exercises/02-selection/: 01-line-selection.hxt  01-line-selection.md  02-extend-mode.hxt  02-extend-mode.md  03-collapse-and-flip.hxt  03-collapse-and-flip.md  04-select-all.hxt  04-select-all.md
exercises/03-changes/: 01-delete-and-change.hxt  01-delete-and-change.md  02-yank-and-paste.hxt  02-yank-and-paste.md  03-undo-redo-repeat.hxt  03-undo-redo-repeat.md  04-indent-and-join.hxt  04-indent-and-join.md  05-case-and-replace.hxt  05-case-and-replace.md
exercises/04-text-objects/: 01-delimiter-objects.hxt  01-delimiter-objects.md  02-word-paragraph.hxt  02-word-paragraph.md  03-treesitter-objects.hxt  03-treesitter-objects.md  04-combining-objects.hxt  04-combining-objects.md
exercises/05-surround/: 01-add-surround.hxt  01-add-surround.md  02-replace-surround.hxt  02-replace-surround.md  03-delete-surround.hxt  03-delete-surround.md  04-surround-workflows.hxt  04-surround-workflows.md
exercises/06-multi-selection/: 00-collapse-selections.hxt  (+11 more)
src/: hxt.rs  main.rs  metadata.rs  progress.ts  reset.ts  verify.ts
tests/: cli_init.rs  init_lib.rs  tui_snapshots.rs  tui_state_machine.rs
(+114 files in other folders)
