[package]
name = "helixir"
version = "3.0.0"
edition = "2024"
authors = ["Steve Godin"]
description = "A practice elixir for the Helix editor — distilled keybinding fluency"
license = "MIT"
keywords = ["helix", "editor", "keybindings", "training", "tutorial"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-mini = "0.5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
include_dir = "0.7"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
